DDBNEXT-518: problem with media queries on IE8 solved

--- a/web-app/css/ddb.css
+++ b/web-app/css/ddb.css
@@ -680,9 +680,16 @@ header .language-widget form,.header .language-widget form {
     margin-left: 60px;
   }
 }
+
 @media (min-width: 980px) and (max-width: 1199px) {
-  #form-search-header .link-adv-search, .header .link-adv-search {
+  #form-search-header .link-adv-search, #form-search-header .link-adv-search {
     margin-left: 40px;
+  }
+}
+
+@media (min-width: 1200px) {
+  .header .link-adv-search {
+    margin-left: 130px !important;
   }
 }
 /* mobile view header - end */
